feat: init first bad implementation